--- a/计算机网络-物理层.md
+++ b/计算机网络-物理层.md
@@ -12,7 +12,7 @@
 
 物理层协议的主要任务：机械特性、电气特性、功能特性、过程特性
 
-![image-20220717135416495](C:\Users\罗小新\AppData\Roaming\Typora\typora-user-images\image-20220717135416495.png)
+![image-20220717135416495](D:\下载\Desktop\JavaMD\计算机网络-物理层.assets\image-20220717135416495.png)
 
 ## 物理层下的传输媒体
 
