--- a/计算机网络-物理层.md
+++ b/计算机网络-物理层.md
@@ -12,7 +12,7 @@
 
 物理层协议的主要任务：机械特性、电气特性、功能特性、过程特性
 
-![image-20220717135416495](D:\下载\Desktop\JavaMD\计算机网络-物理层.assets\image-20220717135416495.png)
+![contents](https://github.com/Yanli0702/JavaMD/raw/master/计算机网络-物理层.assets/image-20220717135416495.png)
 
 ## 物理层下的传输媒体
 
@@ -20,11 +20,11 @@
 
 光在多模光纤中传输一定距离会信号失真，**脉冲展宽**，多模光纤只适合近距离传输
 
-![image-20220715235521274](C:\Users\罗小新\AppData\Roaming\Typora\typora-user-images\image-20220715235521274.png)
+![image-20220715235521274](D:\下载\Desktop\JavaMD\计算机网络-物理层.assets\image-20220715235521274.png)
 
 非导引型传输媒体：无线电波、微波、红外线、可见光 
 
-![image-20220715235752479](C:\Users\罗小新\AppData\Roaming\Typora\typora-user-images\image-20220715235752479.png)
+![image-20220715235752479](D:\下载\Desktop\JavaMD\计算机网络-物理层.assets\image-20220715235752479.png)
 
 无线电频谱管理机构
 
@@ -54,7 +54,7 @@
 
 红色部分常用
 
-![image-20220716162628097](C:\Users\罗小新\AppData\Roaming\Typora\typora-user-images\image-20220716162628097.png)
+![image-20220716162628097](D:\下载\Desktop\JavaMD\计算机网络-物理层.assets\image-20220716162628097.png)
 
 **编码**(->数字信号)
 
@@ -68,19 +68,19 @@
 
 差分曼彻斯特编码：跳变前后是否发生变化来代表信号
 
-![image-20220716163435164](C:\Users\罗小新\AppData\Roaming\Typora\typora-user-images\image-20220716163435164.png)
+![image-20220716163435164](D:\下载\Desktop\JavaMD\计算机网络-物理层.assets\image-20220716163435164.png)
 
 **调制**(->数字信号)
 
 调幅、调频、调相
 
-![image-20220716164238182](C:\Users\罗小新\AppData\Roaming\Typora\typora-user-images\image-20220716164238182.png)
+![image-20220716164238182](D:\下载\Desktop\JavaMD\计算机网络-物理层.assets\image-20220716164238182.png)
 
 **码元**：是一段调制好后的基本波形
 
 还有**混合调制QAM-16**，一个码元可以表示多个比特，码元与4个比特的对应关系需采用格雷码，任意两个相邻码元只有1个比特不同
 
-![image-20220716165240798](C:\Users\罗小新\AppData\Roaming\Typora\typora-user-images\image-20220716165240798.png)
+![image-20220716165240798](D:\下载\Desktop\JavaMD\计算机网络-物理层.assets\image-20220716165240798.png)
 
 ## 信道的极限容量
 
@@ -90,15 +90,17 @@
 
 数据传输速率=波特率(码元传输速率)*每个码元所携带的信息量
 
-Baud=log2 x ![image-20220717135752395](C:\Users\罗小新\AppData\Roaming\Typora\typora-user-images\image-20220717135752395.png)
+Baud=log2 x 
+
+![image-20220717135752395](C:\Users\罗小新\AppData\Roaming\Typora\typora-user-images\image-20220717135752395.png)
 
 
 
-![image-20220717125853406](C:\Users\罗小新\AppData\Roaming\Typora\typora-user-images\image-20220717125853406.png)
+![image-20220717125853406](D:\下载\Desktop\JavaMD\计算机网络-物理层.assets\image-20220717125853406.png)
 
 W为信道带宽(Hz)，S信道内的所传信号的平均功率，N为信道内的高斯噪音功率，S/N信噪比，用分贝表示如下
 
-![image-20220717130737245](C:\Users\罗小新\AppData\Roaming\Typora\typora-user-images\image-20220717130737245.png)
+![image-20220717130737245](D:\下载\Desktop\JavaMD\计算机网络-物理层.assets\image-20220717130737245.png)
 
 
 
