--- a/垃圾回收.md
+++ b/垃圾回收.md
@@ -26,7 +26,7 @@
 
 缺点：单独的计数器增加了储存空间开销；每次赋值都需要更新计数器，增加了时间开销；**无法处理循环引用；**
 
-![image-20220707173708285](D:\下载\Desktop\JavaMD\垃圾回收.assets\image-20220707173708285.png)
+![image-20220707173708285](https://github.com/Yanli0702/JavaMD/raw/master/垃圾回收.assets/image-20220707173708285.png)
 
 Python如何解决循环引用？
 
@@ -40,7 +40,7 @@ Python如何解决循环引用？
 
 哪些元素可以作为GC Roots？
 
-![image-20220707180451109](D:\下载\Desktop\JavaMD\垃圾回收.assets\image-20220707180451109.png)
+![image-20220707180451109](https://github.com/Yanli0702/JavaMD/raw/master/垃圾回收.assets/image-20220707180451109.png)
 
 **在分代收集或局部回收中，也有可能有其他对象的临时加入，如YGC时，老年代可变成Root。**
 
@@ -142,7 +142,7 @@ CMS基于MARK-SWEEP实现，并采用基于MARK-COMPACT算法的SERIAL OLD回收
 
 分区算法将整个堆空间划分为连续的不同小区间region
 
-![image-20220708134700926](D:\下载\Desktop\JavaMD\垃圾回收.assets\image-20220708134700926.png)
+![image-20220708134700926](https://github.com/Yanli0702/JavaMD/raw/master/垃圾回收.assets/image-20220708134700926.png)
 
 
 
@@ -160,7 +160,7 @@ System.gc()与Runtime.getRuntime.gc()一致
 
 与System.runFinalization()搭配则能更及时
 
-![image-20220708152246726](D:\下载\Desktop\JavaMD\垃圾回收.assets\image-20220708152246726.png)
+![image-20220708152246726](https://github.com/Yanli0702/JavaMD/raw/master/垃圾回收.assets/image-20220708152246726.png)
 
 方法3不会回收buffer，方法4会回收buffer，**因为方法3中buffer还与栈中局部变量表的第二位有联系**
 
@@ -184,7 +184,7 @@ OOM：没有空闲内存，并且垃圾收集器也无法提供更多内存；OO
 
 举例：
 
-![image-20220708170606186](D:\下载\Desktop\JavaMD\垃圾回收.assets\image-20220708170606186.png)
+![image-20220708170606186](https://github.com/Yanli0702/JavaMD/raw/master/垃圾回收.assets/image-20220708170606186.png)
 
 
 
@@ -312,9 +312,9 @@ G1：在最大吞吐量优先的情况下(执行性能)，降低停顿时间(用
 
 #### 垃圾回收器概述
 
-![image-20220710103001280](D:\下载\Desktop\JavaMD\垃圾回收.assets\image-20220710103001280.png)
+![image-20220710103001280](https://github.com/Yanli0702/JavaMD/raw/master/垃圾回收.assets/image-20220710103001280.png)
 
-![image-20220710103946178](D:\下载\Desktop\JavaMD\垃圾回收.assets\image-20220710103946178.png)
+![image-20220710103946178](https://github.com/Yanli0702/JavaMD/raw/master/垃圾回收.assets/image-20220710103946178.png)
 
 **查看使用的垃圾回收器**
 
@@ -322,7 +322,7 @@ G1：在最大吞吐量优先的情况下(执行性能)，降低停顿时间(用
 
 ②jinfo -flag 相关垃圾回收器参数 进程ID
 
-![image-20220710105057155](D:\下载\Desktop\JavaMD\垃圾回收.assets\image-20220710105057155.png)
+![image-20220710105057155](https://github.com/Yanli0702/JavaMD/raw/master/垃圾回收.assets/image-20220710105057155.png)
 
 
 
@@ -402,7 +402,7 @@ Concurrent Mark Sweep 并发标记清除
 
 不能与Parallel回收器配合，只能与ParNew、Serial配合
 
-![image-20220710215931890](D:\下载\Desktop\JavaMD\垃圾回收.assets\image-20220710215931890.png)
+![image-20220710215931890](https://github.com/Yanli0702/JavaMD/raw/master/垃圾回收.assets/image-20220710215931890.png)
 
 初始标记 Initial Mark
 
@@ -456,7 +456,7 @@ JDK9开始废弃，JDK14删除CMS
 
 #### G1回收器：区域化分代式
 
-![image-20220710102104370](D:\下载\Desktop\JavaMD\垃圾回收.assets\image-20220710102104370.png)
+![image-20220710102104370](https://github.com/Yanli0702/JavaMD/raw/master/垃圾回收.assets/image-20220710102104370.png)
 
 G1：垃圾优先，优先回收垃圾最大量的区间
 
@@ -466,7 +466,7 @@ G1：垃圾优先，优先回收垃圾最大量的区间
 
 **分代收集** region
 
-![image-20220711101038296](D:\下载\Desktop\JavaMD\垃圾回收.assets\image-20220711101038296.png)
+![image-20220711101038296](https://github.com/Yanli0702/JavaMD/raw/master/垃圾回收.assets/image-20220711101038296.png)
 
 **空间整合**
 
@@ -496,7 +496,7 @@ Young GC \Mixed GC \Full GC
 
 其他垃圾回收器都使用内置的JVM线程执行GC的多线程操作，G1可以调用应用线程承担后台运行的GC工作
 
-![image-20220711104719794](D:\下载\Desktop\JavaMD\垃圾回收.assets\image-20220711104719794.png)
+![image-20220711104719794](https://github.com/Yanli0702/JavaMD/raw/master/垃圾回收.assets/image-20220711104719794.png)
 
 【 Humongous】矩形对象，视为老年区，用于存储大对象，如果大于1.5个region，则直接放入Humongous，如果一个H区装不下，则找连续的H区存放，如果找不到，则Full GC
 
@@ -550,7 +550,7 @@ Young GC \Mixed GC \Full GC
 
 #### 垃圾回收器总结
 
-![image-20220713103235208](D:\下载\Desktop\JavaMD\垃圾回收.assets\image-20220713103235208.png)
+![image-20220713103235208](https://github.com/Yanli0702/JavaMD/raw/master/垃圾回收.assets/image-20220713103235208.png)
 
 
 
