--- a/微服务治理.md
+++ b/微服务治理.md
@@ -1,6 +1,6 @@
 # 微服务治理
 
-![image-20220714222933229](D:\下载\Desktop\JavaMD\微服务治理.assets\image-20220714222933229.png)
+![image-20220714222933229](https://github.com/Yanli0702/JavaMD/raw/master/微服务治理.assets/image-20220714222933229.png)
 
 ## 认识微服务
 
@@ -26,7 +26,7 @@
 
 **微服务框架**：SpringCloud、Dubbo、SpringCloudAlibaba
 
-![image-20220714231249102](D:\下载\Desktop\JavaMD\微服务治理.assets\image-20220714231249102.png)
+![image-20220714231249102](https://github.com/Yanli0702/JavaMD/raw/master/微服务治理.assets/image-20220714231249102.png)
 
 ## 服务拆分及远程调用
 
